[package]
name = "middle_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
axum = { version = "0.7.4", features = ["json", "multipart"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "chrono"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
serde_yaml = "0.9.30"
urlencoding = "2.1.3"
jsonwebtoken = "9.2.0"
rand = "0.8.5"