[package]
name = "middle_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
axum = { version = "0.8.0-alpha.1", features = ["json", "multipart"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql", "chrono"] }
reqwest = { version = "0.12.9", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0.132"
serde_yml = "0.0.12"
urlencoding = "2.1.3"
jsonwebtoken = "9.3.0"
rand = "0.8.5"

void_log = { git = "https://gitee.com/orange_union/void_log.git" }
#void_log = { path = "../void_log" }